hphp/hack/test/typecheck/test_consts6.php.exp
File "test_consts6.php", line 6, characters 17-25:
Illegal constant value (Naming[2023])
